CSS - overflow: clip is not working on SVG elements https://bugs.webkit.org/show_bug.cgi?id=244706

Reviewed by Simon Fraser.

Implement overflow: clip for SVG containers.

* LayoutTests/imported/w3c/web-platform-tests/svg/render/reftests/nested-svg-overflow-clip-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/render/reftests/nested-svg-overflow-clip.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/render/reftests/overflow-clip-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/render/reftests/overflow-clip.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/svg/render/reftests/w3c-import.log:
* Source/WebCore/rendering/style/RenderStyle.h:
(WebCore::isNonVisibleOverflow):
* Source/WebCore/rendering/svg/LegacyRenderSVGRoot.cpp:
(WebCore::LegacyRenderSVGRoot::shouldApplyViewportClip const):
* Source/WebCore/rendering/svg/RenderSVGRoot.cpp:
(WebCore::RenderSVGRoot::shouldApplyViewportClip const):
* Source/WebCore/rendering/svg/SVGRenderSupport.cpp:
(WebCore::SVGRenderSupport::isOverflowHidden):

Canonical link: https://commits.webkit.org/254295@main